--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <h2>This is my website.</h2>
 
         <section id="downloads">
-          <a href="https://github.com/ACoolZero/homepage/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/ACoolZero/homepage/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://acoolzero.github.io/readingroom" class="btn">Reading room</a>
+          <a href="https://acoolzero.github.io/ctf" class="btn">CTF</a>
           <a href="https://github.com/ACoolZero/homepage" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
