--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Homepage</h1>
         <h2>This is my website.</h2>
 
-        <section id="downloads">
+        <section id="tabs">
           <a href="https://acoolzero.github.io/readingroom" class="btn">Reading room</a>
           <a href="https://acoolzero.github.io/ctf" class="btn">CTF</a>
           <a href="https://github.com/ACoolZero/homepage" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
