--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <h2>This is my website.</h2>
 
         <section id="tabs">
-          <a href="https://acoolzero.github.io/readingroom" class="btn">Reading room</a>
-          <a href="https://acoolzero.github.io/ctf" class="btn">CTF</a>
-          <a href="https://github.com/ACoolZero/homepage" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          <a href="readingroom" class="btn">Reading room</a>
+          <a href="ctf" class="btn">CTF</a>
+          <a href="https://github.com/ACoolZero/website" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
     </header>
