--- a/readingroom.html
+++ b/readingroom.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>Homepage by ACoolZero</title>
+    <title>Reading Room by ACoolZero</title>
   </head>
 
   <body>
@@ -19,8 +19,8 @@
         <h2>This is my website.</h2>
 
         <section id="tabs">
-          <a href="https://acoolzero.github.io/readingroom" class="btn">Reading room</a>
-          <a href="https://acoolzero.github.io/ctf" class="btn">CTF</a>
+          <a href="readingroom" class="btn">Reading Room</a>
+          <a href="ctf" class="btn">CTF</a>
           <a href="https://github.com/ACoolZero/homepage" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
@@ -29,17 +29,16 @@
     <div class="container">
       <section id="main_content">
         <h3>
-<a id="welcome-to-reading-room" class="anchor" href="#welcome-to-reading-room" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to Reading room.</h3>
+          <a id="welcome-to-reading-room" class="anchor" href="#welcome-to-reading-room" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to Reading Room.</h3>
 
-<p>This reading room is the easiest way to maintain your beautiful mindset for all of your life.</p>
+        <p>This reading room is the easiest way to maintain your beautiful mindset for all of your life.</p>
+        <h3>
+          <a id="working-at-reading-room" class="anchor" href="#working-at-reading-room" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Working At Reading Room</h3>
 
-<h3>
-<a id="working-at-reading-room" class="anchor" href="#working-at-reading-room" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Working At Reading Room</h3>
-
-<p>We're not looking for any specific roles right now. But that doesn't mean that we're not looking for you. Finding talented people is hard, and we're always looking for folk who can help us improve our work.</p>
-<p>Or, put it this way, for the right person, we'll create a new role.</p>
-<p>So, if you have the sort of talent that is going to help a growing digital agency thrive, then we'd love to hear from you. Whether your skills are in design, programming, copywriting, strategy, account management, project management or something more esoteric (we have two doctors of psychology on staff, so we really do mean that), if you believe you are good enough to make a difference then let us know.</p>
-<p>Sound like you? Email recruitment@readingroom.com and tell us why we should create a role for you. Oh, and include your CV and portfolio, if relevant.</p>
+        <p>We're not looking for any specific roles right now. But that doesn't mean that we're not looking for you. Finding talented people is hard, and we're always looking for folk who can help us improve our work.</p>
+        <p>Or, put it this way, for the right person, we'll create a new role.</p>
+        <p>So, if you have the sort of talent that is going to help a growing digital agency thrive, then we'd love to hear from you. Whether your skills are in design, programming, copywriting, strategy, account management, project management or something more esoteric (we have two doctors of psychology on staff, so we really do mean that), if you believe you are good enough to make a difference then let us know.</p>
+        <p>Sound like you? Email <a href="mailto:recruitment@readingroom.com?subject=I%20want%20to%20work%20at%20Reading%20Room">recruitment@readingroom.com</a> and tell us why we should create a role for you. Oh, and include your CV and portfolio, if relevant.</p>
 
       </section>
     </div>
