--- a/readingroom.html
+++ b/readingroom.html
@@ -15,8 +15,8 @@
 
     <header>
       <div class="container">
-        <h1>Homepage</h1>
-        <h2>This is my website.</h2>
+        <h1>TopDown.uit</h1>
+        <h2>Thinking: Conceptually based (cognitive) processing of sensory data that enables a person to understand his or her world through ordering and interpretation of sense impressions.</h2>
 
         <section id="tabs">
           <a href="readingroom" class="btn">Reading Room</a>
