--- a/readingroom.html
+++ b/readingroom.html
@@ -15,7 +15,7 @@
 
     <header>
       <div class="container">
-        <h1><a href="">TopDown.uit</a></h1>
+        <a href="/"><h1>TopDown.uit</h1></a>
         <h2>Conceptually based (cognitive) processing of sensory data that enables a person to understand his or her world through ordering and interpretation of sense impressions.</h2>
 
         <section id="tabs">
