--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <header>
       <div class="container">
-        <h1>Homepage</h1>
-        <h2>This is my website.</h2>
+        <h1><a style="text-decoration:none" href="/website">TopDown.uit</a></h1>
+        <h2>Conceptually based (cognitive) processing of sensory data that enables a person to understand his or her world through ordering and interpretation of sense impressions.</h2>
 
         <section id="tabs">
           <a href="readingroom" class="btn">Reading room</a>
