--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header>
       <div class="container">
-        <h1><a style="text-decoration:none" href="/website">TopDown.uit</a></h1>
+        <a style="text-decoration:none" href="/website"><h1>TopDown.uit</h1></a>
         <h2>Conceptually based (cognitive) processing of sensory data that enables a person to understand his or her world through ordering and interpretation of sense impressions.</h2>
 
         <section id="tabs">
