--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h2>Conceptually based (cognitive) processing of sensory data that enables a person to understand his or her world through ordering and interpretation of sense impressions.</h2>
 
         <section id="tabs">
-          <a href="readingroom" class="btn">Reading room</a>
+          <a href="readingroom" class="btn">Reading Room</a>
           <a href="ctf" class="btn">CTF</a>
           <a href="https://github.com/ACoolZero/website" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
