--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <section id="tabs">
           <a href="readingroom" class="btn">Reading Room</a>
-          <a href="ctf" class="btn">CTF</a>
+          <a href="ctf" class="btn">CTF Writeups</a>
           <a href="https://github.com/ACoolZero/website" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
