Add header content via header.shtml

--- a/index.html
+++ b/index.html
@@ -12,19 +12,7 @@
   </head>
 
   <body>
-
-    <header>
-      <div class="container">
-    <a style="text-decoration:none" href="/website"><h1>TopDown.uit</h1></a>
-        <h2>Conceptually based (cognitive) processing of sensory data that enables a person to understand his or her world through ordering and interpretation of sense impressions.</h2>
-
-        <section id="tabs">
-          <a href="readingroom" class="btn">Reading Room</a>
-          <a href="ctf" class="btn">CTF Writeups</a>
-          <a href="https://github.com/ACoolZero/website" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+<!--#include file="header.shtml"-->
 
     <div class="container">
       <section id="main_content">
