--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-<!--#include file="header.shtml"-->
+    <html-include src="header.shtml"></html-include>
 
     <div class="container">
       <section id="main_content">
