--- a/header.html
+++ b/header.html
@@ -1,9 +1,12 @@
-<nav class="navbar navbar-default">
-  <div class="container">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">
-        <span>Inside header.html</span>
-      </a>
-    </div>
-  </div>
-</nav>
+    <header>
+      <div class="container">
+    <a style="text-decoration:none" href="/website"><h1>TopDown.uit</h1></a>
+        <h2>Conceptually based (cognitive) processing of sensory data that enables a person to understand his or her world through ordering and interpretation of sense impressions.</h2>
+
+        <section id="tabs">
+          <a href="readingroom" class="btn">Reading Room</a>
+          <a href="ctf" class="btn">CTF Writeups</a>
+          <a href="https://github.com/ACoolZero/website" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+</header>
