--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,6 @@
 <hr>
 <div class="container">
-  <p>This is the footer, inside footer.html</p>
+  <p align="center">Think of us as 0, learning from top to down would quite easy than you think.</p>
+  <p align="center">Published by ACoolZero. Powered by Github.</p>
 </div>
 <hr>
