Adding Projects tab

--- a/header.html
+++ b/header.html
@@ -6,6 +6,7 @@
         <section id="tabs">
           <a href="readingroom" class="btn">Reading Room</a>
           <a href="ctf" class="btn">CTF Writeups</a>
+            <a href="projects" class="btn">Projects</a>
           <a href="https://github.com/ACoolZero/website" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
