--- a/projects/index.html
+++ b/projects/index.html
@@ -35,8 +35,8 @@
      <div class="container">
       <section id="main_content">
         <h3>
-          <a id="welcome-to-projects" class="anchor" href="gioithieunganh" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Đồ án môn Giới thiệu ngành</h3>
-
+          <a id="welcome-to-projects" class="anchor" href="#welcome-to-projects" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Projects</h3>
+        <p><a href="gioithieunganh">Đồ án môn học Giới thiệu ngành</a></p>
       </section>
 </div>
     
