Update and rename projects/index.html to projects.html

--- a/projects.html
+++ b/projects.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Homepage by ACoolZero</title>
-    <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="/stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="/stylesheets/print.css" media="print">
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
     <!-- Conditionally load WC polyfills -->
     <!-- Thanks to https://github.com/geelen/x-gif for the snippet -->
     <script>if (!('registerElement' in document
@@ -17,7 +17,7 @@
       && 'content' in document.createElement('template'))) {
             document.write('<script src="bower_components/webcomponentsjs/webcomponents.min.js"><\/script>');
       }</script>
-    <script src="/src/html-include.js"></script>
+    <script src="src/html-include.js"></script>
     <script>
       document.addEventListener('DOMContentLoaded', function () {
         document.querySelector('pre').innerHTML = document.body.innerHTML
@@ -30,7 +30,7 @@
     </script>
   </head>
   <body>
-    <html-include src="/header.html"></html-include>
+    <html-include src="header.html"></html-include>
     na
      <div class="container">
       <section id="main_content">
@@ -41,7 +41,7 @@
 </div>
     
     
-    <html-include src="/footer.html"></html-include>
+    <html-include src="footer.html"></html-include>
   </body>
 </html>
 
