--- a/projects/gioithieunganh.html
+++ b/projects/gioithieunganh.html
@@ -14,7 +14,7 @@
       && 'createShadowRoot' in HTMLElement.prototype
       && 'import' in document.createElement('link')
       && 'content' in document.createElement('template'))) {
-            document.write('<script src="bower_components/webcomponentsjs/webcomponents.min.js"><\/script>');
+            document.write('<script src="../bower_components/webcomponentsjs/webcomponents.min.js"><\/script>');
       }</script>
     <script src="../src/html-include.js"></script>
     <script>
