--- a/header.html
+++ b/header.html
@@ -4,9 +4,9 @@
         <h2>Conceptually based (cognitive) processing of sensory data that enables a person to understand his or her world through ordering and interpretation of sense impressions.</h2>
 
         <section id="tabs">
-          <a href="readingroom" class="btn">Reading Room</a>
-          <a href="ctf" class="btn">CTF Writeups</a>
-            <a href="projects" class="btn">Projects</a>
+          <a href="/website/readingroom" class="btn">Reading Room</a>
+          <a href="/website/ctf" class="btn">CTF Writeups</a>
+            <a href="/website/projects" class="btn">Projects</a>
           <a href="https://github.com/ACoolZero/website" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
