--- a/projects/header.html
+++ b/projects/header.html
@@ -6,6 +6,7 @@
           <a href="" class="btn">Chủ đề</a>
           <a href="dannhap" class="btn">Dẫn nhập</a>
           <a href="noidung" class="btn">Nội dung báo cáo</a>
+          <a href="quatrinh" class="btn">Quá trình</a>
           <a href="thanhvien" class="btn">Thành viên</a>
 </section>
       </div>
