--- a/projects/thanhvien.html
+++ b/projects/thanhvien.html
@@ -41,9 +41,9 @@
     <th></th>
       </tr>
       <tr>
-    <th>Nguyễn Phi Cường</th>
-    <th>14520112</th>
-    <th>MMT-TT</th>
+    <td>Nguyễn Phi Cường</td>
+    <td>14520112</td>
+    <td>MMT-TT</td>
   </tr>
   <tr>
     <td>Đoàn Quang Nhật Quân</td>
