--- a/test_dynamic.html
+++ b/test_dynamic.html
@@ -2,37 +2,34 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Using a DOM function</title>
+        <title>Dynamic Styles</title>
         <style>
-            a {background-color:#eee;}
-            a:hover {background:#ff0;}
-            #toggleMe {background:#cfc; display:none; margin:30px 0; padding:1em;}
+            ul {display:none;}
         </style>
     </head>
+
     <body>
-        <h1>Using a DOM function</h1>
+        <h1>Welcome to Dynamic HTML</h1>
 
-        <h2><a id="showhide" href="#">Show paragraph</a></h2>
+        <p><a href="#">Dynamic styles are a key feature of DHTML.</a></p>
 
-        <p id="toggleMe">This is the paragraph that is only displayed on request.</p>
+        <ul>
+            <li>Change the color, size, and typeface of text</li>
+            <li>Show and hide text</li>
+            <li>And much, much more</li>
+        </ul>
 
-        <p>The general flow of the document continues.</p>
+        <p>We've only just begun!</p>
 
         <script>
-            changeDisplayState = function (id) {
-                var d = document.getElementById('showhide'),
-                    e = document.getElementById(id);
-                if (e.style.display === 'none' || e.style.display === '') {
-                    e.style.display = 'block';
-                    d.innerHTML = 'Hide paragraph';
-                } else {
-                    e.style.display = 'none';
-                    d.innerHTML = 'Show paragraph';
-                }
+            showMe = function () {
+                document.getElementsByTagName("h1")[0].style.color = "#990000";
+                document.getElementsByTagName("ul")[0].style.display = "block";
             };
-            document.getElementById('showhide').onclick = function () {
-                changeDisplayState('toggleMe');
-                return false;
+
+            document.getElementsByTagName("a")[0].onclick = function (e) {
+                e.preventDefault();
+                showMe();
             };
         </script>
     </body>
