--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
      <div class="container">
       <section id="main_content">
         <h3>
-          <a id="welcome-to-hompage" class="anchor" href="#welcome-to-hompage" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>History of home pages</h3>
+          <a id="welcome-to-homepage" class="anchor" href="#welcome-to-homepage" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>History of home pages</h3>
         <p>In the early days of the World Wide Web in the first half of the 1990s, an important part of web pages belonged to students or teachers with a UNIX account in their university. System administrators of such systems installed an HTTP server pointing its root directory to the directory containing the users accounts. On UNIX, the base directory of an account is called "home", and the HOME environment variable contains its path (for example <a>/home/my_username</a>). The URL of the home page is usually has the format <a>https://example.edu/~my_username/</a>. Thus the term home page appeared and then spread to its current usage.</p>
         <p>A personal home page historically has served as a means of self-portrayal, job-related presentation, and pure enjoyment, giving way to professional advancement and social interaction. Owing to the rise of social media sites, personal home pages are no longer as common as during the mid-late 1990s and early-2000s.</p>
       </section>
