--- a/test_dynamic.html
+++ b/test_dynamic.html
@@ -1,36 +1,48 @@
-<!doctype html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Dynamic Styles</title>
-        <style>
-            ul {display:none;}
-        </style>
-    </head>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <body>
-        <h1>Welcome to Dynamic HTML</h1>
-
-        <p><a href="#">Dynamic styles are a key feature of DHTML.</a></p>
-
-        <ul>
-            <li>Change the color, size, and typeface of text</li>
-            <li>Show and hide text</li>
-            <li>And much, much more</li>
-        </ul>
-
-        <p>We've only just begun!</p>
-
-        <script>
-            showMe = function () {
-                document.getElementsByTagName("h1")[0].style.color = "#990000";
-                document.getElementsByTagName("ul")[0].style.display = "block";
-            };
-
-            document.getElementsByTagName("a")[0].onclick = function (e) {
-                e.preventDefault();
-                showMe();
-            };
-        </script>
-    </body>
+    <title>Homepage by ACoolZero</title>
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <!-- Conditionally load WC polyfills -->
+    <!-- Thanks to https://github.com/geelen/x-gif for the snippet -->
+    <script>if (!('registerElement' in document
+      && 'createShadowRoot' in HTMLElement.prototype
+      && 'import' in document.createElement('link')
+      && 'content' in document.createElement('template'))) {
+            document.write('<script src="bower_components/webcomponentsjs/webcomponents.min.js"><\/script>');
+      }</script>
+    <script src="src/html-include.js"></script>
+    <script>
+      document.addEventListener('DOMContentLoaded', function () {
+        document.querySelector('pre').innerHTML = document.body.innerHTML
+          .replace(/&/g, "&amp;")
+          .replace(/</g, "&lt;")
+          .replace(/>/g, "&gt;")
+          .replace(/"/g, "&quot;")
+          .replace(/'/g, "&#039;");
+      });
+    </script>
+      <script>         
+    document.getElementsByTagName("a")[0].onclick = function (e) {
+        e.preventDefault();
+        document.getElementsById("content_loading").src=document.getElementsByTagName("a")[0].href;
+        };
+      </script>
+  </head>
+  <body>
+    <html-include src="header.html"></html-include>
+    
+     <div class="container">
+      <section id="main_content">
+          <html-include id="content_loading" src=""></html-include>
+      </section>
+</div>
+ 
+    <html-include src="footer.html"></html-include>
+  </body>
 </html>
