--- a/footer.html
+++ b/footer.html
@@ -2,6 +2,6 @@
 
 <hr>
 <div class="container">
-  <p align="center">Published by ACoolZero. Powered by Github.</p>
+  <p align="center">Published by <a href="about_me.html">ACoolZero</a>. Powered by <a href="https://github.com/">Github</a>.</p>
 </div>
 <hr>
