--- a/test_dynamic.html
+++ b/test_dynamic.html
@@ -39,7 +39,7 @@
     
      <div class="container">
       <section id="main_content">
-          <html-include id="content_loading" src="https://google.com"></html-include>
+          <html-include id="content_loading" src="about_me.html"></html-include>
       </section>
 </div>
  
