--- a/projects/gioithieunganh.html
+++ b/projects/gioithieunganh.html
@@ -34,7 +34,7 @@
      <div class="container">
       <section id="main_content">      
         <h3>Đồ án 1:</h3>
-      <p>Nhóm sinh viên sẽ tìm hiểu các công nghệ không dây hiện nay. Ví dụ: RFID, 2G, 3G, Bluetooth, Satellite, 802.11, Li-Fi... Với mỗi công nghệ mạng không dây, nhóm hãy trình bày: khá niệm, đặc điểm kỹ thuật, ứng dụng và ưu nhược điểm của chúng.</p>
+      <p>Nhóm sinh viên sẽ tìm hiểu các công nghệ không dây hiện nay. Ví dụ: RFID, 2G, 3G, Bluetooth, Satellite, 802.11, Li-Fi... Với mỗi công nghệ mạng không dây, nhóm hãy trình bày: khái niệm, đặc điểm kỹ thuật, ứng dụng và ưu nhược điểm của chúng.</p>
        <p>Ngữ cảnh: <a>Xe hơi thông minh</a></p>
         <p>Nhóm sinh viên hãy phân tích các trang thiết bị, vật dụng hay vật nuôi trong ngữ cảnh đó có thể kết nối không dây. Sau đó, hãy đề xuất dùng công nghệ mạng không dây nào để kết nối cho từng trường hợp cụ thể. Dựa vào các đặc điểm kỹ thuật, ứng dụng, ưu và nhược điểm của mỗi công nghệ không dây, hãy giải thích lý do vì sao sử dụng công nghệ kết nối không dây đó cho mỗi trường hợp.</p>
        <p>Lưu ý: để dễ minh họa, nhóm sinh viên hãy dùng các công cụ hỗ trợ vẽ để mô phỏng các ngữ cảnh trên.</p>
