--- a/test_dynamic.html
+++ b/test_dynamic.html
@@ -28,7 +28,7 @@
       });
     </script>
       <script>         
-    document.getElementsByTagName("a")[0].onclick = return function (e) {
+    document.getElementsByTagName("a")[0].onclick = window.stop(); function (e) {
         e.preventDefault();
         document.getElementsById("content_loading").src=document.getElementsByTagName("a")[0].href;
         };
