--- a/header.html
+++ b/header.html
@@ -1,4 +1,24 @@
-    <header>
+//Facebook SDK  
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '425620047637623',
+      xfbml      : true,
+      version    : 'v2.8'
+    });
+
+    // ADD ADDITIONAL FACEBOOK CODE HERE
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
+<header>
       <div class="container">
     <a style="text-decoration:none" href="/website"><h1>TopDown.uit</h1></a>
         <h2>Conceptually based (cognitive) processing of sensory data that enables a person to understand his or her world through ordering and interpretation of sense impressions.</h2>
