--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -19,8 +19,8 @@
         </style>
 </head>
     <body>
-			<audio autoplay="autopaly">
-					<source src="music/AsLongAsYouLoveMe.mp3" type="audio/mp3" />
+			<audio autoplay="autoplay">
+					<source src="music/Noi-Nay-Co-Anh-Son-Tung-M-TP.flac" type="audio/mp3" />
 			</audio>  
         <div id="main">
             <div id="error">Trình duyệt của bạn không được hỗ trợ. Để được hỗ trợ liên hệ fb.me/nguyen.phicuong.135. Hoặc sử dụng (<a href="http://www.google.cn/chrome">Chrome</a>) và (<a href="http://firefox.com/download/">Firefox</a>)</div>
