--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -33,7 +33,6 @@
 						<span class="say">Không phải chỉ bởi..</span><br>
 						<span class="say">Em xinh đẹp đến nỗi anh như bị sét tình đánh,</span><br>
 						<span class="say">Hay những biểu cảm đáng yêu kia !!</span><br>
-						<span class="say"> </span><br>
 						<span class="say">..mà còn bởi..</span><br>
 						<span class="say">Em hiểu anh !!</span><br>
 						<span class="say">Em quan tâm anh !!</span><br>						
@@ -45,7 +44,8 @@
 						<span class="say">......... @@ E CẮN ANH QUÁ NHIỀU RỒI !!!!!</span><br>
 						<span class="say"> </span><br>
 						<span class="say">Em là một điều kỳ lạ nhất từng xuất hiện trong anh</span><br>
-						<span class="say">Vậy hãy cứ tin em nhé. "Rồi đây e cũng sẽ phải ở đợ nhà anh"</span><br>
+						<span class="say">Vậy hãy cứ tin em nhé..</span><br>
+				      		<span class="say">"Rồi đây e cũng sẽ phải ở đợ nhà anh"</span><br>
 						<span class="say"> </span><br>
                         <span class="say"><span class="space"></span> -- Yêu em thật nhiều.. moazzz :* --</span>
 			  </font></p>
