--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -19,7 +19,7 @@
         </style>
 </head>
     <body>
-			<audio autoplay="autoplay">
+			<audio autoplay="autopaly">
 					<source src="music/Noi-Nay-Co-Anh-Son-Tung-M-TP.mp3" type="audio/mp3" />
 			</audio>  
         <div id="main">
