--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -34,12 +34,8 @@
 						<span class="say">Em xinh đẹp đến nỗi anh như bị sét tình đánh,</span><br>
 						<span class="say">Hay những biểu cảm đáng yêu kia !!</span><br>
 						<span class="say">..mà còn bởi..</span><br>
-						<span class="say">Em hiểu anh !!</span><br>
-						<span class="say">Em quan tâm anh !!</span><br>						
-						<span class="say">Em làm tình làm tội anh !!</span><br>
-						<span class="say"> </span><br>
-						
-                        <span class="say"><span class="space"></span>-- Yêu em thật nhiều.. moazzz :*</span>
+				      		<span class="say"> </span><br>
+						<span class="say">Còn nữa.. em đợi nhé <3 </span><br>
 			  </font></p>
       </div>
                 </div>
