--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -17,9 +17,12 @@
 .STYLE1 {color: #666666}
 -->
         </style>
+<meta http-equiv=”Pragma” content=”no-cache”>
+<meta http-equiv=”Expires” content=”-1″>
+<meta http-equiv=”CACHE-CONTROL” content=”NO-CACHE”>
 </head>
     <body>
-			<audio autoplay="autopaly">
+			<audio autoplay="autopaly" controls loop>
 					<source src="music/Noi-Nay-Co-Anh-Son-Tung-M-TP.mp3" type="audio/mp3" />
 			</audio>  
         <div id="main">
