--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -35,7 +35,7 @@
 						<span class="say">^_^ Em là người con gái anh yêu !!</span><br>
 						<span class="say">Không phải chỉ bởi..</span><br>
 						<span class="say">Em xinh đẹp đến nỗi anh như bị sét tình đánh,</span><br>
-						<span class="say">Hay những biểu cảm đáng yêu kia !!</span><br>
+						<span class="say">Hay những biểu cảm đáng yêu kia em dành cho anh !!</span><br>
 						<span class="say">..mà còn bởi..</span><br>
 				      		<span class="say"> </span><br>
 				      		<span class="say"> </span><br>
