--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -41,7 +41,9 @@
 				      		<span class="say">..mà còn bởi..</span><br>
 				      		<span class="say"> </span><br>
 				      		<span class="say"> </span><br>
-						<span class="say">Còn nữa.. em đợi nhé <3 </span><br>
+						<span class="say">Còn nữa..</span><br>
+						<span class="say">Hôm nào đó anh sẽ viết tiếp.. <3 </span><br>
+						<span class="say"><3 em đợi nhé <3 </span><br>
 							<span class="say">Hihi.. </span><br>
 			  </font></p>
       </div>
