--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -186,8 +186,10 @@
             }
         }));
 
-        var textAnimate = eval(Jscex.compile("async", function () {		
-		    var together = new Date("Mar 22, 2017 0:0:1").getTime();	
+        var textAnimate = eval(Jscex.compile("async", function () {	
+		 window.open('http://cafebiz.vn/tinh-yeu-thoi-nay-that-nhat-nheo-hom-nay-minh-di-dau-lam-gi-bay-gio-nhi-20170309150838005.chn', '_blank');
+		 
+		var together = new Date("Mar 22, 2017 0:0:1").getTime();	
 			
 		    $("#code").show().typewriter();
             $("#clock-box").fadeIn(500);
