--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -49,7 +49,7 @@
       </div>
                 </div>
                 <div id="clock-box">
-                    <span class="STYLE1"></span><font color="#FF0000">* Anh Yêu Em *</font>
+                    <span class="STYLE1"></span><a href='http://cafebiz.vn/tinh-yeu-thoi-nay-that-nhat-nheo-hom-nay-minh-di-dau-lam-gi-bay-gio-nhi-20170309150838005.chn'><font color="#FF0000">* Anh Yêu Em *</font></a>
 <span class="STYLE1"> Đếm ngược tới ngày kia...</span>
                   <div id="clock"></div>
               </div>
