--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -26,7 +26,7 @@
 					<source src="music/Noi-Nay-Co-Anh-Son-Tung-M-TP.mp3" type="audio/mp3" />
 			</audio>  
         <div id="main">
-            <div id="error">Trình duyệt của bạn không được hỗ trợ. Để được hỗ trợ liên hệ fb.me/nguyen.phicuong.135. Hoặc sử dụng (<a href="http://www.google.com/chrome">Chrome</a>) và (<a href="http://firefox.com/download/">Firefox</a>)</div>
+            <div id="error">Trình duyệt của bạn không được hỗ trợ. Bạn nên sử dụng (<a href="http://www.google.com/chrome">Chrome</a>) và (<a href="http://firefox.com/download/">Firefox</a>)</div>
              <div id="wrap">
                 <div id="text">
 			        <div id="code">
