--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -39,13 +39,15 @@
 						<span class="say">..em dành cho anh !!</span><br>
 				      
 				      		<span class="say">..mà còn bởi..</span><br>
-				      		<span class="say"> </span><br>
-				      		<span class="say"> </span><br>
-						<span class="say">Còn nữa..</span><br>
-						<span class="say">Hôm nào đó anh sẽ viết tiếp.. <3 </span><br>
+				      		<span class="say">Em hiểu anh !!</span><br>
+						<span class="say">Em quan tâm anh !!</span><br>						
+						<span class="say">Em làm tình làm tội anh >.< </span><br>
+				      		
+			  </font>
+				     		<span class="say"> </span><br>
+						<span class="say">Anh sẽ viết tiếp.. <3 </span><br>
 						<span class="say"><3 em đợi nhé <3 </span><br>
-							<span class="say">Hihi.. </span><br>
-			  </font></p>
+			</p>
       </div>
                 </div>
                 <div id="clock-box">
