--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -37,7 +37,7 @@
 						<span class="say">Em xinh đẹp đến nỗi anh như bị sét tình đánh,</span><br>
 						<span class="say">Hay những biểu cảm đáng yêu kia,</span><br>
 						<span class="say">..em dành cho anh !!</span><br>
-				      
+				     		<span class="say"> </span><br>
 				      		<span class="say">..mà còn bởi..</span><br>
 				      		<span class="say">Em hiểu anh !!</span><br>
 						<span class="say">Em quan tâm anh !!</span><br>						
@@ -45,7 +45,7 @@
 				      		
 			  </font>
 				     		<span class="say"> </span><br>
-						<span class="say">Anh sẽ viết tiếp.. <3 </span><br>
+						<span class="say">Anh sẽ viết tiếp..</span><br>
 						<span class="say"><3 em đợi nhé <3 </span><br>
 			</p>
       </div>
