--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -42,7 +42,9 @@
 				      		<span class="say">Em hiểu anh !!</span><br>
 						<span class="say">Em quan tâm anh !!</span><br>						
 						<span class="say">Em làm tình làm tội anh >.< </span><br>
-				      		
+						<span class="say">Em khiến anh yêu em từ ngày này sang ngày kia..</span><br>
+						<span class="say">..cũng cắn đau anh từ ngày này qua ngày khác !!</span><br>
+			      		
 			  </font>
 				     		<span class="say"> </span><br>
 				     		<span class="say"> </span><br>
