--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -44,7 +44,8 @@
 						<span class="say">Em làm tình làm tội anh >.< </span><br>
 						<span class="say">Em khiến anh yêu em từ ngày này sang ngày kia..</span><br>
 						<span class="say">..cũng cắn đau anh từ ngày này qua ngày khác !!</span><br>
-			      		
+			      			<span class="say">Em là một điều kỳ lạ nhất từng xuất hiện trong anh</span><br>
+
 			  </font>
 				     		<span class="say"> </span><br>
 				     		<span class="say"> </span><br>
