--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -44,13 +44,15 @@
 						<span class="say">Em làm tình làm tội anh >.< </span><br>
 						<span class="say">Em khiến anh yêu em từ ngày này sang ngày kia..</span><br>
 						<span class="say">..cũng cắn đau anh từ ngày này qua ngày khác !!</span><br>
+							<span class="say"> </span><br>
 			      			<span class="say">Em là một điều kỳ lạ nhất từng xuất hiện trong anh</span><br>
+						<span class="say">Vậy hãy cứ tin em nhé..</span><br>
+				      		<span class="say">"Rồi đây e cũng sẽ phải ở đợ nhà anh"</span><br>
+						<span class="say"> </span><br>
+												
+                        <span class="say"><span class="space"></span>-- Yêu em thật nhiều.. moazzz :*</span>
 
 			  </font>
-				     		<span class="say"> </span><br>
-				     		<span class="say"> </span><br>
-						<span class="say">Anh sẽ viết tiếp..</span><br>
-						<span class="say"><3 em đợi nhé <3 </span><br>
 			</p>
       </div>
                 </div>
