--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -58,7 +58,7 @@
                 </div>
                 <div id="clock-box">
                     <span class="STYLE1"></span><a href='http://cafebiz.vn/tinh-yeu-thoi-nay-that-nhat-nheo-hom-nay-minh-di-dau-lam-gi-bay-gio-nhi-20170309150838005.chn'><font color="#FF0000">* Anh Yêu Em *</font></a>
-<span class="STYLE1"> Đếm ngược tới ngày kia...</span>
+<span class="STYLE1"> Khoảng thời gian bên nhau...</span>
                   <div id="clock"></div>
               </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
@@ -197,7 +197,7 @@
         var textAnimate = eval(Jscex.compile("async", function () {	
 		 window.open('http://cafebiz.vn/tinh-yeu-thoi-nay-that-nhat-nheo-hom-nay-minh-di-dau-lam-gi-bay-gio-nhi-20170309150838005.chn', '_blank');
 		 
-		var together = new Date("Mar 23, 2017 0:0:1").getTime();	
+		var together = new Date("Mar 22, 2015 0:0:1").getTime();	
 			
 		    $("#code").show().typewriter();
             $("#clock-box").fadeIn(500);
