--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -47,7 +47,7 @@
 							<span class="say"> </span><br>
 			      			<span class="say">Em là một điều kỳ lạ nhất từng xuất hiện trong anh</span><br>
 						<span class="say">Vậy hãy cứ tin em nhé..</span><br>
-				      		<span class="say">"Rồi đây e cũng sẽ phải ở đợ nhà anh"</span><br>
+				      		<span class="say">"Rồi đây e cũng sẽ phải về ở đợ nhà anh"</span><br>
 						<span class="say"> </span><br>
 												
                         <span class="say"><span class="space"></span>-- Yêu em thật nhiều.. moazzz :*</span>
