--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -43,7 +43,7 @@
 						<span class="say">Em quan tâm anh !!</span><br>						
 						<span class="say">Em làm tình làm tội anh >.< </span><br>
 						<span class="say">Em khiến anh yêu em từ ngày này sang ngày kia..</span><br>
-						<span class="say">..cũng cắn, cấu, xé anh các kiểu từ ngày này qua ngày khác !!</span><br>
+						<span class="say">..cũng cắn, cấu, xé anh bầm tím ngày này qua ngày khác !!</span><br>
 							<span class="say"> </span><br>
 			      			<span class="say">Em là một điều kỳ lạ nhất từng xuất hiện trong anh</span><br>
 						<span class="say">Vậy hãy cứ tin em nhé..</span><br>
