Add youtube list

--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -216,8 +216,9 @@
         runAsync().start();
     })();
     </script>
-	    <audio autoplay="autopaly" controls loop>
+	    <iframe width="720" height="405" src="https://www.youtube.com/embed/?listType=playlist&list=PLsBwWQkOtT2LdZWoMmK3ygK_zp_EPEsyh" frameborder="0" allowfullscreen>
+	  <!--  <audio autoplay="autopaly" controls loop>
 		    <source src="music/YeuAnh.mp3" type="audio/mp3" />
-	    </audio>  
+	    </audio>  -->
 </body>
 </html>
