--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -216,7 +216,7 @@
         runAsync().start();
     })();
     </script>
-	    <iframe width="0" height="0" src="https://www.youtube.com/embed/?listType=playlist&list=PLsBwWQkOtT2LdZWoMmK3ygK_zp_EPEsyh&autoplay=1&index=38&t=0s" frameborder="0" allowfullscreen>
+	    <iframe width="0" height="0" src="https://www.youtube.com/embed/?listType=playlist&list=PLsBwWQkOtT2LdZWoMmK3ygK_zp_EPEsyh&index=34&t=0s&autoplay=1" frameborder="0" allowfullscreen>
 	  <!--  <audio autoplay="autopaly" controls loop>
 		    <source src="music/YeuAnh.mp3" type="audio/mp3" />
 	    </audio>  -->
