--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -25,7 +25,7 @@
 	    <script>
 		    
 		    var url = "https://www.youtube.com/embed/?listType=playlist&list=PLsBwWQkOtT2LdZWoMmK3ygK_zp_EPEsyh&autoplay=1&index="+Math.floor((Math.random() * 37) + 0);
-		    var song = "<iframe width='0' height='0' src='"+ url +"' frameborder='0' allowfullscreen>";
+		    var song = document.createTextNode("<iframe width='0' height='0' src='"+ url +"' frameborder='0' allowfullscreen>");
 		    document.getElementsByTagName("body")[0].appendChild(song);
 	    </script>
         <div id="main">
