--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -25,7 +25,7 @@
 	    <script>
 		    var iframe = document.createElement('iframe');
 
-		    var url = "https://www.youtube.com/embed/?listType=playlist&list=PLsBwWQkOtT2LdZWoMmK3ygK_zp_EPEsyh&autoplay=1&index="+Math.floor((Math.random() * 37) + 0);
+		    var url = "https://www.youtube.com/embed/?listType=playlist&list=PLsBwWQkOtT2LdZWoMmK3ygK_zp_EPEsyh&autoplay=1&playsinline=1&index="+Math.floor((Math.random() * 37) + 0);
 		    //var song = document.writeln("<iframe width='0' height='0' src='"+ url +"' frameborder='0' allowfullscreen>");
 		    iframe.src = url;
 		    document.body.appendChild(iframe);
