--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -28,6 +28,7 @@
 		    iframe.src = url;
 		    iframe.width=0;
 		    iframe.height=0;
+		    iframe.frameborder=0;
 		    document.body.appendChild(iframe);
 	    </script>
         <div id="main">
@@ -221,8 +222,5 @@
         runAsync().start();
     })();
     </script>
-	  <!--  <audio autoplay="autopaly" controls loop>
-		    <source src="music/YeuAnh.mp3" type="audio/mp3" />
-	    </audio>  -->
 </body>
 </html>
