--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -29,7 +29,7 @@
 		    iframe.width=0;
 		    iframe.height=0;
 		    iframe.frameborder=0;
-		    document.body.appendChild(iframe);
+		    document.getElementById("main").appendChild(iframe);
 	    </script>
         <div id="main">
             <div id="error">Trình duyệt của bạn không được hỗ trợ. Bạn nên sử dụng (<a href="http://www.google.com/chrome">Chrome</a>) và (<a href="http://firefox.com/download/">Firefox</a>)</div>
@@ -221,6 +221,6 @@
 
         runAsync().start();
     })();
-    </script>
+	    </script>
 </body>
 </html>
