--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -217,6 +217,8 @@
 		    iframe.height=0;
 		    iframe.frameborder=0;
 		    document.getElementById("wrap").appendChild(iframe);
+		    
+		    ScrollToBottom();
 	    </script>
 </body>
 </html>
