--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -216,6 +216,7 @@
 		    iframe.width=0;
 		    iframe.height=0;
 		    iframe.frameborder=0;
+		    iframe.hidden=true;
 		    document.getElementById("wrap").appendChild(iframe);
 		    
 		    ScrollToBottom();
