--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -213,11 +213,8 @@
 		    var iframe = document.createElement('iframe');
 		    var url = "https://www.youtube.com/embed/?listType=playlist&list=PLsBwWQkOtT2LdZWoMmK3ygK_zp_EPEsyh&autoplay=1&index="+Math.floor((Math.random() * 37) + 0);
 		    iframe.src = url;
-		    iframe.width=0;
-		    iframe.height=0;
-		    iframe.frameborder=0;
 		    iframe.hidden="true";
-		    document.getElementById("wrap").appendChild(iframe);
+		    document.body.appendChild(iframe);
 		    
 		    ScrollToBottom();
 	    </script>
