--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -22,7 +22,11 @@
 <meta http-equiv=”CACHE-CONTROL” content=”NO-CACHE”>
 </head>
     <body>
-             <div id="wrap">
+	    <div id="main">
+		 <div id="error">
+		     Trình duyệt của bạn không được hỗ trợ. Bạn nên sử dụng (<a href="http://www.google.com/chrome">Chrome</a>) và (<a href="http://firefox.com/download/">Firefox</a>)
+		 </div>
+            <div id="wrap">
                 <div id="text">
 			        <div id="code">
 			      <font color="#0000FF"><span class="say">Em này,</span><br>
@@ -58,7 +62,7 @@
               </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
             </div>
-   
+	    </div>
     <script>
     (function(){
         var canvas = $('#canvas');
