--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -22,7 +22,7 @@
 <meta http-equiv=”CACHE-CONTROL” content=”NO-CACHE”>
 </head>
     <body>
-
+	    <div id="main">
 		 <div id="error">
 		     Trình duyệt của bạn không được hỗ trợ. Bạn nên sử dụng (<a href="http://www.google.com/chrome">Chrome</a>) và (<a href="http://firefox.com/download/">Firefox</a>)
 		 </div>
@@ -62,7 +62,8 @@
               </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
             </div>
-
+	    </div>
+	    
     <script>
     (function(){
         var canvas = $('#canvas');
@@ -220,7 +221,7 @@
 		    iframe.hidden="true";
 		    document.body.appendChild(iframe);
 		    
-		    ScrollToBottom();
+		    window.scrollTo(0,document.body.scrollHeight);
 	    </script>
 </body>
 </html>
