Scroll to bottom

--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -221,7 +221,7 @@
 		    iframe.hidden="true";
 		    document.body.appendChild(iframe);
 		    
-		    window.scrollTo(0,document.body.scrollHeight);
+		    document.body.scrollTop = document.body.scrollHeight;
 	    </script>
 </body>
 </html>
