--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -216,7 +216,7 @@
 	    </script>
 	    <script>
 		    var iframe = document.createElement('iframe');
-		    var url = "https://www.youtube.com/embed/?listType=playlist&list=PLsBwWQkOtT2LdZWoMmK3ygK_zp_EPEsyh&autoplay=1&index="+Math.floor((Math.random() * 37) + 0);
+		    var url = "https://www.youtube.com/embed/?listType=playlist&list=PLsBwWQkOtT2LdZWoMmK3ygK_zp_EPEsyh&autoplay=1&loop=1&index="+Math.floor((Math.random() * 37) + 0);
 		    iframe.src = url;
 		    iframe.hidden="true";
 		    document.body.appendChild(iframe);
