--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -42,7 +42,7 @@
 						<span class="say">Em quan tâm anh !!</span><br>						
 						<span class="say">Em làm tình làm tội anh >.< </span><br>
 						<span class="say">Em khiến anh yêu em từ ngày này sang ngày kia..</span><br>
-						<span class="say">..cũng cắn,cấu,xé bầm anh ngày này qua ngày khác !!</span><br>
+						<span class="say">..cũng cắn,cấu,xé bầm anh ngày này qua ngày khác</span><br>
 						<span class="say"> </span><br>
 			      			<span class="say">Em là một điều kỳ lạ nhất từng xuất hiện trong anh</span><br>
 						<span class="say">Vậy hãy cứ tin em nhé..</span><br>
@@ -60,7 +60,7 @@
 <span class="STYLE1"> Khoảng thời gian bên nhau...</span>
                   <div id="clock"></div>
               </div>
-                <canvas id="canvas" width="1200" height="680"></canvas>
+                <canvas id="canvas" width="1100" height="680"></canvas>
             </div>
 	    </div>
 	    
