--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -26,7 +26,7 @@
 		 <div id="error">
 		     Trình duyệt của bạn không được hỗ trợ. Bạn nên sử dụng (<a href="http://www.google.com/chrome">Chrome</a>) và (<a href="http://firefox.com/download/">Firefox</a>)
 		 </div>
-		    <div id="playlist" style="display: none;">
+		    <div id="playlist">
 		    </div>
             <div id="wrap">
                 <div id="text">
