--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -222,7 +222,7 @@
 		    var iframe = document.createElement('iframe');
 		    var url = "https://www.youtube.com/embed/?listType=playlist&list=PLsBwWQkOtT2LdZWoMmK3ygK_zp_EPEsyh&autoplay=1&loop=1&index="+Math.floor((Math.random() * 37) + 0);
 		    iframe.src = url;
-		    iframe.frameborder = 0;
+		    iframe.frameBorder = 0;
 		    iframe.width = "90%";
 		    iframe.height = "1";
 		    document.getElementById("playlist").appendChild(iframe);
